--- a/settings.json
+++ b/settings.json
@@ -9,14 +9,14 @@
 	],
 	"server_options": {
 		"848149296054272000": {
-			"allow_images": false,
+			"allow_images": true,
 			"disabled": false,
-			"chat_prefix": "="
+			"chat_prefix": ""
 		},
 		"1072352297503440936": {
 			"allow_images": true,
 			"disabled": false,
-			"chat_prefix": ""
+			"chat_prefix": "="
 		}
 	}
 }
