--- a/settings.json
+++ b/settings.json
@@ -1,22 +1,24 @@
 {
-	// "chat_channels": [
-	// 	1072352297503440936,
-	// 	1052918701663461396,
-	// 	1072354381271404675
-	// ],
-	// "mark_channels": [
-	// 	1055681260233699359
-	// ],
+	"chat_channels": [
+		1072352297503440936,
+		1052918701663461396,
+		1072354381271404675
+	],
+	"mark_channels": [
+		1055681260233699359
+	],
 	"server_options": {
-		// "848149296054272000": {
-		// 	"allow_images": false,
-		// 	"can_chat": true,
-		// 	"chat_prefix": "="
-		// },
-		"1072352297503440936": {
+		"848149296054272000": { 
+			"name": "ufsih",
 			"allow_images": true,
 			"can_chat": true,
 			"chat_prefix": ""
+		},
+		"1072352297503440936": {
+			"name": "hunm",
+			"allow_images": true,
+			"can_chat": true,
+			"chat_prefix": "="
 		}
 	}
 }
