--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,8 @@
     "chat_channels": [
         1072352297503440936,
         1052918672009744414,
-        1072354381271404675
+        1072354381271404675,
+        1093414282085007411
     ],
     "server_options": {
         "848149296054272000": {
@@ -22,6 +23,22 @@
             "system": null,
             "starter": null,
             "start_with": null
+        },
+        "1093414282085007411": {
+            "can_chat": true,
+            "start_with": "",
+            "chat_prefix": null,
+            "allow_images": true,
+            "system": null,
+            "starter": null
+        },
+        "1052918672009744414": {
+            "can_chat": true,
+            "start_with": "",
+            "chat_prefix": null,
+            "allow_images": true,
+            "system": null,
+            "starter": null
         }
     }
 }
